--- a/src/index.css
+++ b/src/index.css
@@ -199,5 +199,46 @@ html, body, #root {
     --dialog-title: var(--dark-text-color);
     --dialog-text: var(--dark-text-secondary-color);
   }
+
+
+}
+
+/* NOTE: from what I understand, css has issues with multiple transitions on the same element | 
+	EG: If i had a transition for color, then another for transform, it would be ignored.
+	So I have to create a new combined transition for each element that needs it.
+ */
+@layer utilities {
+	/* General theme transition */
+  .theme-transition {
+    transition-property: color, background-color, border-color;
+    transition-timing-function: ease-in-out;
+    transition-duration: 300ms;
+  }
+  
+  .resident-list-transition {
+    transition: max-height 300ms cubic-bezier(0.4, 0, 0.2, 1),
+                opacity 300ms cubic-bezier(0.4, 0, 0.2, 1),
+                transform 300ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 300ms ease-in-out,
+                background-color 300ms ease-in-out,
+                border-color 300ms ease-in-out;
+    
+  }
+
+  .resident-details-transition {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
+                opacity 500ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
+                color 300ms ease-in-out,
+                background-color 300ms ease-in-out,
+                border-color 300ms ease-in-out;
+  }
+
+  .header-transition {
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1),
+                opacity 300ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 300ms ease-in-out,
+                background-color 300ms ease-in-out,
+                border-color 300ms ease-in-out;
+  }
 }
 
