feat(Auth): Finally started working on the Auth again. Implemented AuthGuard which checks for authentication and redirects. Started rework on the Routes as well since it's all part of it. Added basic errorpage for now. Added css vars for error page

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,11 @@ html, body, #root {
 
    	/* Page colors */
    	--page-bg: var(--light-page-bg);
+
+	/* Error Page colors */
+	--error-page-bg: var(--light-page-bg);
+	--error-page-text: var(--light-text-color);
+	--error-page-text-secondary: var(--light-text-secondary-color);
    
     /* Sidebar colors */
     --sidebar-bg: var(--light-bg-color);
@@ -122,6 +127,10 @@ html, body, #root {
 
 	/* Page colors */
     --page-bg: var(--dark-page-bg);
+
+	/* Error Page colors */
+	--error-page-bg: var(--dark-page-bg);
+	--error-page-text: var(--dark-text-secondary-color);
 
     /* Sidebar colors */
     --sidebar-bg: var(--dark-bg-color);
