--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,11 @@ html, body, #root {
 	--error-page-bg: var(--light-page-bg);
 	--error-page-text: var(--light-text-color);
 	--error-page-text-secondary: var(--light-text-secondary-color);
+
+   /* Auth Page colors */
+   --auth-page-bg: var(--light-page-bg);
+   --auth-page-text: var(--light-text-color);
+   --auth-page-text-secondary: var(--light-text-secondary-color);
    
     /* Sidebar colors */
     --sidebar-bg: var(--light-bg-color);
@@ -173,6 +178,10 @@ html, body, #root {
 	--error-page-bg: var(--dark-page-bg);
 	--error-page-text: var(--dark-text-secondary-color);
 
+    /* Auth Page colors */
+    --auth-page-bg: var(--dark-page-bg);
+    --auth-page-text: var(--dark-text-color);
+    --auth-page-text-secondary: var(--dark-text-secondary-color);
     /* Sidebar colors */
     --sidebar-bg: var(--dark-bg-color);
     --sidebar-border: var(--dark-border-color);
